Add markdown for About page content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ import "@fontsource/rajdhani/500.css";
     <div class="grid h-full place-items-center">
         <div>
             <h1 class="text-center text-9xl text-white title-writing">AInk News</h1>
-            <h2 class="text-left text-3xl text-white undertitle-writing">
+            <h2 class="text-left text-3xl text-white subtitle-writing">
                 Tailor-made news experiences
             </h2>
         </div>
@@ -60,7 +60,7 @@ import "@fontsource/rajdhani/500.css";
         font-family: "Chivo Variable", sans-serif;
     }
 
-    .undertitle-writing {
+    .subtitle-writing {
         font-family: "Rajdhani", sans-serif;
     }
 </style>
