--- a/src/pages/socialmedia.astro
+++ b/src/pages/socialmedia.astro
@@ -2,12 +2,12 @@
 import "@fontsource-variable/chivo";
 import "@fontsource/rajdhani/500.css";
 
-import Content from "../components/about.md";
+import Content from "../components/socialmedia.md";
 ---
 
 <head>
     <meta charset="utf-8">
-    <title>AInk News – About</title>
+    <title>AInk News – Social Media</title>
 </head>
 
 <nav class="flex items-center w-screen h-20 p-3 static-bg">
@@ -19,13 +19,13 @@ import Content from "../components/about.md";
         </div>
     </div>
     <div class="flex justify-center items-center grow gap-10">
-        <a class="nav-link active text-2xl" href="/about">
+        <a class="nav-link text-2xl" href="/about">
             About
         </a>
         <a class="nav-link text-2xl" href="/mailing">
             Mailing List
         </a>
-        <a class="nav-link text-2xl" href="/socialmedia">
+        <a class="nav-link active text-2xl" href="/socialmedia">
             Social Media
         </a>
     </div>
