--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import "@fontsource/rajdhani/500.css";
 <head>
     <meta charset="utf-8">
     <title>AInk News</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <div class="h-screen bg-fixed moving-bg">
@@ -23,7 +24,7 @@ import "@fontsource/rajdhani/500.css";
     <div class="grid h-full place-items-center">
         <div>
             <h1 class="text-center text-9xl text-white title-writing">AInk News</h1>
-            <h2 class="text-left text-3xl text-white subtitle-writing">
+            <h2 class="text-center lg:text-left text-3xl text-white subtitle-writing">
                 Tailor-made news experiences
             </h2>
         </div>
