--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -6,11 +6,18 @@
 
 .dynamic-bg {
     animation:
-        left-color 21s infinite,
-        right-color 19s infinite;
-    animation-timing-function: linear;
+        17s overlay-size,
+        23s left-color,
+        19s right-color;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
     background: linear-gradient(
-        90deg,
+        270deg,
+        transparent calc(50% - var(--overlay-size-portrait)),
+        var(--accent-color) 50%,
+        transparent calc(50% + var(--overlay-size-portrait))
+    ), linear-gradient(
+        270deg,
         var(--left-color) 0%,
         var(--accent-color) 50%,
         var(--right-color) 100%
