--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{title}</title>
     </head>
-    <body>
+    <body class="dark:bg-black dark:text-white">
         <slot />
     </body>
 </html>
