--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Fullscreen from '../layouts/fullscreen.astro'
+import Layout from '../layouts/fullscreen.astro'
 ---
 
-<Fullscreen title="AInk News" activePage="">
+<Layout title="AInk News" activePage="">
     <div>
         <h1 class="text-center text-9xl text-white title-writing">AInk News</h1>
         <h2 class="text-center lg:text-left text-3xl text-white subtitle-writing">
             Tailor-made news experiences
         </h2>
     </div>
-</Fullscreen>
+</Layout>
