--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -2,6 +2,10 @@
 import "@fontsource-variable/chivo";
 import "@fontsource/rajdhani/500.css";
 
+interface Props {
+    title: string
+}
+
 const { title } = Astro.props
 ---
 <html lang="en">
