--- a/src/pages/mailing.astro
+++ b/src/pages/mailing.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/fullscreen.astro'
 ---
 
-<Layout title="AInk News – Mailing List" activePage="mailing">
+<Layout title="AInk News – Mailing List" activePage="mailing" showLogo>
     <form method="post" action="https://listmonk.aink.news/subscription/form" class="bg-white dark:bg-slate-700 shadow-md rounded w-[95%] lg:w-1/5 px-8 pt-6 pb-8 mb-4">
         <div class="mb-4">
             <h2 class="text-3xl">Mailing List</h2>
