--- a/src/layouts/fullscreen.astro
+++ b/src/layouts/fullscreen.astro
@@ -11,8 +11,8 @@ interface Props {
 const { title, activePage, showLogo } = Astro.props
 ---
 <Base title={title}>
-    <div class="h-screen dynamic-bg">
-        <nav class="absolute flex flex-col lg:flex-row items-center w-screen h-20 p-3">
+    <div class="h-screen flex flex-col dynamic-bg">
+        <nav class="lg:absolute flex flex-col lg:flex-row items-center w-screen h-20 p-3">
             {showLogo &&
                 <div class="text-4xl h-[1em]">
                     <div class="lg:absolute block">
@@ -34,7 +34,7 @@ const { title, activePage, showLogo } = Astro.props
                 </a>
             </div>
         </nav>
-        <div class="grid h-full place-items-center">
+        <div class="grid grow place-items-center">
             <slot />
         </div>
     </div>
