--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -1,39 +1,21 @@
 ---
 import Base from './base.astro'
+import Nav from '../components/nav.astro'
 import '../styles/default.scss'
 
 interface ComponentProps {
     title: string
-    activePage: string
-    showLogo: boolean
 }
 
 type Props = {
     frontmatter: ComponentProps
 } | ComponentProps
 
-const { title, activePage } = "frontmatter" in Astro.props ? Astro.props.frontmatter : Astro.props
+const { title } = "frontmatter" in Astro.props ? Astro.props.frontmatter : Astro.props
 ---
 <Base title={title}>
-    <nav class="dynamic-bg flex flex-col lg:flex-row items-center w-screen h-20 p-3">
-        <div class="text-4xl h-[1em]">
-            <div class="lg:absolute block">
-                <a class="nav-home" href="/">
-                    <h1 class="title-writing">AInk News</h1>
-                </a>
-            </div>
-        </div>
-        <div class="flex justify-center items-center grow gap-10">
-            <a class:list={['nav-link', {active: activePage === 'about'}, 'text-2xl']} href="/about">
-                About
-            </a>
-            <a class:list={['nav-link', {active: activePage === 'mailing'}, 'text-2xl']} href="/mailing">
-                Mailing List
-            </a>
-            <a class:list={['nav-link', {active: activePage === 'socialmedia'}, 'text-2xl']} href="/socialmedia">
-                Social Media
-            </a>
-        </div>
+    <nav class="dynamic-bg flex justify-between items-center w-screen h-20 p-3">
+        <Nav showLogo />
     </nav>
     <div class="content max-w-full mx-auto py-10 px-3">
         <slot />
