--- a/src/layouts/fullscreen.astro
+++ b/src/layouts/fullscreen.astro
@@ -1,38 +1,19 @@
 ---
 import Base from './base.astro'
+import Nav from '../components/nav.astro'
 import '../styles/fullscreen.scss'
 
 interface Props {
     title: string
-    activePage: string
     showLogo?: boolean
 }
 
-const { title, activePage, showLogo } = Astro.props
+const { title, showLogo } = Astro.props
 ---
 <Base title={title}>
     <div class="h-screen flex flex-col dynamic-bg">
-        <nav class="lg:absolute flex flex-col lg:flex-row items-center w-screen h-20 p-3">
-            {showLogo &&
-                <div class="text-4xl h-[1em]">
-                    <div class="lg:absolute block">
-                        <a class="nav-home" href="/">
-                            <h1 class="title-writing">AInk News</h1>
-                        </a>
-                    </div>
-                </div>
-            }
-            <div class="flex justify-center items-center grow gap-10">
-                <a class:list={['nav-link', {active: activePage === 'about'}, 'text-2xl']} href="/about">
-                    About
-                </a>
-                <a class:list={['nav-link', {active: activePage === 'mailing'}, 'text-2xl']} href="/mailing">
-                    Mailing List
-                </a>
-                <a class:list={['nav-link', {active: activePage === 'socialmedia'}, 'text-2xl']} href="/socialmedia">
-                    Social Media
-                </a>
-            </div>
+        <nav class="lg:absolute flex justify-between items-center w-screen h-20 p-3">
+            <Nav showLogo={showLogo} />
         </nav>
         <div class="grid grow place-items-center">
             <slot />
