--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/fullscreen.astro'
 ---
 
-<Layout title="AInk News" activePage="">
+<Layout title="AInk News">
     <div>
         <h1 class="text-center text-9xl text-white title-writing">AInk News</h1>
         <h2 class="text-center lg:text-left text-3xl text-white subtitle-writing">
